--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          </head>
 
              <body>
-                <img id="f2" src="imagens/imagem.PNG" alt="logan da empresa, uma tulipa holandesa" style="width: 150pxpx;height:150px;">
+                <img id="f2" src="img/imagem.PNG" alt="logan da empresa, uma tulipa holandesa" style="width: 150pxpx;height:150px;">
 
                      <h1 style="font-size: 300%; color: purple;"> JESSICA FLORIO </h1>
                      <hr style="margin-left: 2cm; margin-right: 2cm;">
@@ -40,10 +40,10 @@
 
                     <h1 style="margin-top: 2cm;">Referencia de trabalhos</h1>
 
-                 <img src="imagens/imagem.jpeg" alt="mulher sentada palestrando" style="width: 1270px;height: 500px; margin-top: 2cm;">
+                 <img src="img/imagem.jpeg" alt="mulher sentada palestrando" style="width: 1270px;height: 500px; margin-top: 2cm;">
                              <p>palestras para parlamentares em Macapá</p>
 
-                <img src="imagens/palestra1.jpeg" alt="mulher de vestido verde palestrando" style="width: 1270px;height: 500px; margin-top: 2cm;">
+                <img src="img/palestra1.jpeg" alt="mulher de vestido verde palestrando" style="width: 1270px;height: 500px; margin-top: 2cm;">
 
                              <p id="f1">palestra brasileiras na Europa</p>
 
